extendr-macros/tests/cases/case-extendr-macro.stderr
error: Unexpected key
 --> tests/cases/case-extendr-macro.rs:4:11
  |
4 | #[extendr(foo = true)]
  |           ^^^

error: unexpected end of input, `use_try_from` must be `true` or `false`
 --> tests/cases/case-extendr-macro.rs:7:1
  |
7 | #[extendr(use_try_from = 1)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `extendr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, `r_name` must be a string literal
  --> tests/cases/case-extendr-macro.rs:10:1
   |
10 | #[extendr(r_name = 1)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `extendr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, `mod_name` must be a string literal
  --> tests/cases/case-extendr-macro.rs:13:1
   |
13 | #[extendr(mod_name = 1)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `extendr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, `use_rng` must be `true` or `false`
  --> tests/cases/case-extendr-macro.rs:16:1
   |
16 | #[extendr(use_rng = 1)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `extendr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Only struct is supported
  --> tests/cases/case-extendr-macro.rs:20:1
   |
20 | / enum Foo1 {
21 | |     A,
22 | |     B,
23 | |     C,
24 | | }
   | |_^

error: Only struct is supported
  --> tests/cases/case-extendr-macro.rs:27:1
   |
27 | / enum Foo2 {
28 | |     A,
29 | |     B,
30 | |     C,
31 | | }
   | |_^
